# pass-the-butter-robot

./: README.md  drive-mechanism.md  links.md  planning.md
cad/: base2.fcstd  base2.fcstd1  base_full.fcstd
cad/base/: axis.fcstd  base.fcstd1  bumper.fcstd  holdr.fcstd  motor_holder.fcstd1  motor_holder_upper.fcstd
cad/encoder/: encoder_16.fcstd  encoder_disc.fcstd  encoder_disc_final.fcstd  encoder_holder_final.fsctd
cad/v2/: CE5_bumper.gcode  base.fcstd  bumper.fcstd1  motor_holder.fcstd
doc/: links.md
pass_the_butter_description/: CMakeLists.txt  package.xml
pass_the_butter_description/meshes/collision/: base_full.stl
pass_the_butter_description/meshes/visual/: base_full.dae  bumper.dae  motor_holder.dae
pass_the_butter_description/robots/: pass_the_butter.urdf  passbutter_simple.urdf
pass_the_butter_sensors/: CMakeLists.txt  package.xml
pass_the_butter_sensors/launch/: optical_encoders.launch
pass_the_butter_sensors/scripts/: optical_encoder.py
pass_the_butter_sensors/src/ultrasonic_rangefinder/: ultrasonic_rangefinder.ino
passbutter-motion_controller/: CMakeLists.txt  package.xml  setup.py
passbutter-motion_controller/launch/: joy_control.launch  test_launch.launch
passbutter-motion_controller/nodes/: test_node
passbutter-motion_controller/scripts/: joystick  kinematic  motion_command_generator  motion_control
passbutter-motion_controller/src/motion_controller/: __init__.py  drives.py
passbutter_launch/: CMakeLists.txt  package.xml
passbutter_launch/launch/: basic_drivers.launch  drive.launch  remote_control.launch
